--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,12 @@
   "start_url": ".",
   "icons": [
     {
-      "src": "/apple/icons/icon_192x192.png",
+      "src": "/okc-ai.github.io/apple/icons/icon_192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/apple/icons/icon_512x512.png",
+      "src": "/okc-ai.github.io/apple/icons/icon_512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
