--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://heycovid.com/okc-ai.github.io/",
+  "homepage": "http://okc.ai",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
