--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "predeploy": "expo build:web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.6",
     "expo": "~36.0.0",
+    "firebase": "^7.11.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-gifted-chat": "^1.0.5",
     "react-native": "~0.61.4",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-gifted-chat": "^0.13.0",
     "react-native-ionicons": "^5.0.0-beta",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
